[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/weapons/a_shield.png" type="Texture" id=1]
[ext_resource path="res://scripts/weapons/attack_shield.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 3 )

[node name="attack_shield" type="KinematicBody2D" groups=[
"weapons",
]]
collision_layer = 0
collision_mask = 32
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5

[node name="box_left" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
shape = SubResource( 1 )
disabled = true

[node name="box_right" type="CollisionShape2D" parent="."]
position = Vector2( 4, 0 )
shape = SubResource( 2 )
disabled = true

[node name="box_top" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 3 )
disabled = true
